# knowledge-graph

./: LICENSE  README.md
.github/workflows/: render-diagrams.yml
Python/: homepage.md
algorithm/: homepage.md
java/: homepage.md
java/JVM/: visualvm.md
python/: homepage.md
python/其他/: 包管理.md
python/包/pytest/: homepage.md
python/包/pytest/testcase/: conftest.py  pyproject.toml  pytest.ini  test_002_mark.py  test_003_fixture.py  test_004_allure.py
python/包/pytest/testcase/asserts/: mark_parametrize_data.csv
python/基础/: 基础语法.ipynb
自动化测试/: homepage.md
自动化测试/web-selenium/: helloworld.py  pyproject.toml
自动化测试/web-selenium/登录/: test_login.py
附录/: 附录A-markdown语法.md
